:art: add social medial

--- a/frontend/src/app/core/home/home.component.html
+++ b/frontend/src/app/core/home/home.component.html
@@ -38,12 +38,24 @@
         <small>Developer</small>
         <img src="./assets/team/AhmedAbbas.jpg" alt="Abbas" />
         <div class="social-box">
-          <i class="fab fa-linkedin"></i>
-          <i class="fab fa-github"></i>
-          <i class="fab fa-facebook"></i>
+          <i class="fab fa-linkedin">
+            <a
+              href="https://www.linkedin.com/in/ahmeddabbas"
+              target="_blank"
+            ></a>
+          </i>
+          <i class="fab fa-github">
+            <a href="https://github.com/AhmedAbbas19" target="_blank"></a>
+          </i>
+          <i class="fab fa-facebook">
+            <a
+              href="https://www.facebook.com/AhmeddAbbas17"
+              target="_blank"
+            ></a>
+          </i>
           <i class="fab fa-twitter"></i>
         </div>
-        <p>Full Stack Developer</p>
+        <p>Front End Developer</p>
       </div>
       <div
         class="profile-box"
@@ -55,12 +67,26 @@
         <small>Developer</small>
         <img src="./assets/team/amir.JPG" alt="Amir" />
         <div class="social-box">
-          <i class="fab fa-linkedin"></i>
-          <i class="fab fa-github"></i>
-          <i class="fab fa-facebook"></i>
-          <i class="fab fa-twitter"></i>
+          <i class="fab fa-linkedin">
+            <a
+              href="https://www.linkedin.com/in/amir-suliman"
+              target="_blank"
+            ></a>
+          </i>
+          <i class="fab fa-github">
+            <a href="https://github.com/Amir-Mohammed" target="_blank"></a>
+          </i>
+          <i class="fab fa-facebook">
+            <a
+              href="https://www.facebook.com/profile.php?id=100000197766213"
+              target="_blank"
+            ></a>
+          </i>
+          <i class="fab fa-twitter">
+            <a href="" target="_blank"></a>
+          </i>
         </div>
-        <p>Full Stack Developer</p>
+        <p>Front End Developer</p>
       </div>
       <div
         class="profile-box"
@@ -72,10 +98,24 @@
         <small>Developer</small>
         <img src="./assets/team/ahmedMostafa.JPG" alt="Mostafa" />
         <div class="social-box">
-          <i class="fab fa-linkedin"></i>
-          <i class="fab fa-github"></i>
-          <i class="fab fa-facebook"></i>
-          <i class="fab fa-twitter"></i>
+          <i class="fab fa-linkedin">
+            <a
+              href="https://www.linkedin.com/in/ahmed-mostafa-elsayed"
+              target="_blank"
+            ></a>
+          </i>
+          <i class="fab fa-github">
+            <a href="https://github.com/AhmedMostafa4200" target="_blank"></a>
+          </i>
+          <i class="fab fa-facebook">
+            <a
+              href="https://www.facebook.com/profile.php?id=100002909005135"
+              target="_blank"
+            ></a>
+          </i>
+          <i class="fab fa-twitter">
+            <a href="" target="_blank"></a>
+          </i>
         </div>
         <p>Front End Developer</p>
       </div>
@@ -86,13 +126,27 @@
         fxFlex.lt-sm="100%"
       >
         <h4>Abdallah Ragab</h4>
-        <small>Designer</small>
+        <small>Developer</small>
         <img src="./assets/team/Abdallah.jpg" alt="Abdallah" />
         <div class="social-box">
-          <i class="fab fa-linkedin"></i>
-          <i class="fab fa-github"></i>
-          <i class="fab fa-facebook"></i>
-          <i class="fab fa-twitter"></i>
+          <i class="fab fa-linkedin">
+            <a
+              href="https://www.linkedin.com/in/abdallahragab49"
+              target="_blank"
+            ></a>
+          </i>
+          <i class="fab fa-github">
+            <a href="https://github.com/abdallahragab40" target="_blank"></a>
+          </i>
+          <i class="fab fa-facebook">
+            <a
+              href="https://www.facebook.com/abdallahragab49"
+              target="_blank"
+            ></a>
+          </i>
+          <i class="fab fa-twitter">
+            <a href="https://twitter.com/abdallahragab49" target="_blank"></a>
+          </i>
         </div>
         <p>Front End Developer</p>
       </div>
