:white_check_mark: update social media

--- a/frontend/src/app/core/home/home.component.html
+++ b/frontend/src/app/core/home/home.component.html
@@ -38,21 +38,15 @@
         <small>Developer</small>
         <img src="./assets/team/AhmedAbbas.jpg" alt="Abbas" />
         <div class="social-box">
-          <i class="fab fa-linkedin">
-            <a
-              href="https://www.linkedin.com/in/ahmeddabbas"
-              target="_blank"
-            ></a>
-          </i>
-          <i class="fab fa-github">
-            <a href="https://github.com/AhmedAbbas19" target="_blank"></a>
-          </i>
-          <i class="fab fa-facebook">
-            <a
-              href="https://www.facebook.com/AhmeddAbbas17"
-              target="_blank"
-            ></a>
-          </i>
+          <a href="https://www.linkedin.com/in/ahmeddabbas" target="_blank">
+            <i class="fab fa-linkedin"> </i>
+          </a>
+          <a href="https://github.com/AhmedAbbas19" target="_blank">
+            <i class="fab fa-github"> </i>
+          </a>
+          <a href="https://www.facebook.com/AhmeddAbbas17" target="_blank">
+            <i class="fab fa-facebook"> </i>
+          </a>
           <i class="fab fa-twitter"></i>
         </div>
         <p>Front End Developer</p>
@@ -67,24 +61,21 @@
         <small>Developer</small>
         <img src="./assets/team/amir.JPG" alt="Amir" />
         <div class="social-box">
-          <i class="fab fa-linkedin">
-            <a
-              href="https://www.linkedin.com/in/amir-suliman"
-              target="_blank"
-            ></a>
-          </i>
-          <i class="fab fa-github">
-            <a href="https://github.com/Amir-Mohammed" target="_blank"></a>
-          </i>
-          <i class="fab fa-facebook">
-            <a
-              href="https://www.facebook.com/profile.php?id=100000197766213"
-              target="_blank"
-            ></a>
-          </i>
-          <i class="fab fa-twitter">
-            <a href="" target="_blank"></a>
-          </i>
+          <a href="https://www.linkedin.com/in/amir-suliman" target="_blank">
+            <i class="fab fa-linkedin"> </i>
+          </a>
+          <a href="https://github.com/Amir-Mohammed" target="_blank">
+            <i class="fab fa-github"> </i>
+          </a>
+          <a
+            href="https://www.facebook.com/profile.php?id=100000197766213"
+            target="_blank"
+          >
+            <i class="fab fa-facebook"> </i>
+          </a>
+          <a href="" target="_blank">
+            <i class="fab fa-twitter"> </i>
+          </a>
         </div>
         <p>Front End Developer</p>
       </div>
@@ -98,21 +89,21 @@
         <small>Developer</small>
         <img src="./assets/team/ahmedMostafa.JPG" alt="Mostafa" />
         <div class="social-box">
-          <i class="fab fa-linkedin">
-            <a
-              href="https://www.linkedin.com/in/ahmed-mostafa-elsayed"
-              target="_blank"
-            ></a>
-          </i>
-          <i class="fab fa-github">
-            <a href="https://github.com/AhmedMostafa4200" target="_blank"></a>
-          </i>
-          <i class="fab fa-facebook">
-            <a
-              href="https://www.facebook.com/profile.php?id=100002909005135"
-              target="_blank"
-            ></a>
-          </i>
+          <a
+            href="https://www.linkedin.com/in/ahmed-mostafa-elsayed"
+            target="_blank"
+          >
+            <i class="fab fa-linkedin"> </i>
+          </a>
+          <a href="https://github.com/AhmedMostafa4200" target="_blank">
+            <i class="fab fa-github"> </i>
+          </a>
+          <a
+            href="https://www.facebook.com/profile.php?id=100002909005135"
+            target="_blank"
+          >
+            <i class="fab fa-facebook"> </i>
+          </a>
           <i class="fab fa-twitter">
             <a href="" target="_blank"></a>
           </i>
@@ -129,24 +120,18 @@
         <small>Developer</small>
         <img src="./assets/team/Abdallah.jpg" alt="Abdallah" />
         <div class="social-box">
-          <i class="fab fa-linkedin">
-            <a
-              href="https://www.linkedin.com/in/abdallahragab49"
-              target="_blank"
-            ></a>
-          </i>
-          <i class="fab fa-github">
-            <a href="https://github.com/abdallahragab40" target="_blank"></a>
-          </i>
-          <i class="fab fa-facebook">
-            <a
-              href="https://www.facebook.com/abdallahragab49"
-              target="_blank"
-            ></a>
-          </i>
-          <i class="fab fa-twitter">
-            <a href="https://twitter.com/abdallahragab49" target="_blank"></a>
-          </i>
+          <a href="https://www.linkedin.com/in/abdallahragab49" target="_blank">
+            <i class="fab fa-linkedin"> </i>
+          </a>
+          <a href="https://github.com/abdallahragab40" target="_blank">
+            <i class="fab fa-github"> </i>
+          </a>
+          <a href="https://www.facebook.com/abdallahragab49" target="_blank">
+            <i class="fab fa-facebook"> </i>
+          </a>
+          <a href="https://twitter.com/abdallahragab49" target="_blank">
+            <i class="fab fa-twitter"> </i>
+          </a>
         </div>
         <p>Front End Developer</p>
       </div>
